<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/beam_indicator_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@android:drawable/ic_dialog_alert"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/connection_problem"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#DADADC"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/beam_services_unavailable"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#DADADC"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/beam_bluetooth_indicator"
            android:onClick="enableBluetooth"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bluetooth"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/beam_enable_bluetooth"
                android:layout_gravity="center_vertical"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/beam_nfc_indicator"
            android:onClick="enableNfc"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_nfc"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/beam_enable_nfc"
                android:layout_gravity="center_vertical"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/beam_nfc_beam_indicator"
            android:onClick="enableNfc"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_beam_touch"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/beam_enable_nfc_beam"
                android:layout_gravity="center_vertical"/>

        </TableRow>
    </TableLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#DADADC"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>