<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/add_participants_help"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <ImageView
            android:src="@android:drawable/ic_menu_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"/>
        <EditText
            android:id="@+id/user_name"
            android:hint="@string/add_participant"
            android:layout_weight="1"
            android:inputType="textCapWords"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"/>
        <ImageView
            android:id="@+id/cancel_searchmode"
            android:src="@drawable/ic_action_cancel"
            android:visibility="gone"
            android:onClick="onSearchModeCancel"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/participant_container"
        android:background="@drawable/container_background"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/participants"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="0dp"/>
        <GridView
            android:id="@+id/participant_grid"
            android:numColumns="auto_fit"
            android:columnWidth="60dp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <GridView
        android:id="@+id/user_grid"
        android:numColumns="auto_fit"
        android:columnWidth="60dp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>